# Assigments

./: .gitignore
01-06-2025/: README.md  db_updatetion_from_pdf.ipynb  main.py  pyproject.toml  rag.py
01-06-2025/src/data_ingestion/: pdf_loader.py
01-06-2025/src/document_processing/: process_data.py
01-06-2025/src/embeddings/: embedder.py
01-06-2025/src/retriver/: retrive_fromdb.py
01-06-2025/src/vector_store_manager/: database_initialize.py
08-01-2025/: README.md  main.py  pyproject.toml  test.ipynb
08-01-2025/agents/: internetsearch.py  utils.py
08-01-2025/utils/: CONSTANT.py  agents_chain.py  final_agent.py  pydantic_validators.py  utils.py
15-06-2025/: Travelagent.ipynb  pyproject.toml  readme.md
15-06-2025/utils/: CONSTANT.py  hotels.py  places_api.py  utils.py  validators.py  weathapi.py
21-06-2025/: agentic_rag.ipynb
24-05-2025/: Langchain-assigment-01.ipynb
25-052025/: documentloaders.ipynb  speech.txt
31.-05-2025/: assigment3.ipynb
autogen/: societyofmind.ipynb  societyofmind.py
autogenassment0/: main.py  readME.md  streamlit_app.py  t2.py  test.py
autogenassment0/agents/inneragents/: ActivityAgent.py  GoalAgent.py  MealSuggestionAgent.py  NutritionBalanceAgent.py  PreferenceAgent.py  prompt_template.py  user_proxy_agent.py
autogenassment0/agents/outputagent/: PROMPT.py  output_summariser.py
autogenassment0/assets/: flow.drawio
autogenassment0/models/: open_ai_model_client.py
autogenassment0/som/: dietryneedssom.py  mealssom.py
autogenassment0/teams/innerteams/: DietaryNeedsteam.py  MealPlanCreationTeam.py  t.txt
(+1 files in other folders)
